fix css bug with button on mobile

--- a/css/all.css
+++ b/css/all.css
@@ -371,7 +371,7 @@ padding: 10px 15px;
         margin-top:10px}
 
     .rf-txt{
-        height:500px}
+        height:560px}
 }
 
 /* Small devices (tablets, 769px and up) */
